finito il manque la deco

--- a/TravailSession/TravailSession/Pages/Statistique.xaml
+++ b/TravailSession/TravailSession/Pages/Statistique.xaml
@@ -5,7 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TravailSession.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:Classe="using:TravailSession.Classes"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 <ScrollView>
@@ -27,12 +28,27 @@
 
             <StackPanel Orientation="Vertical" Margin="10">
                 <TextBlock>Nombre d'adhérent par activité :</TextBlock>
-                <ListView  x:Name="lv_nb_adherent_x_activite" BorderThickness="5" Height="200" Width="600" BorderBrush="Coral"></ListView>
+                <ListView  x:Name="lv_nb_adherent_x_activite" BorderThickness="5" Height="200" Width="600" BorderBrush="Coral">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="Classe:ActiviteClasse">
+                            <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
+                                <StackPanel Margin="0, 0,80 , 0">
+                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind Nbr_adherent}" HorizontalAlignment="Left"/>
+                                </StackPanel>
+
+                                <StackPanel Margin="0, 0, 100, 0"  Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind Nom }"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+
+                </ListView>
 
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="10">
-                <TextBlock>Moyenne des notes d'appréciation:</TextBlock>
+                <TextBlock Margin="0,0,10,0">Moyenne des notes d'appréciation:</TextBlock>
                 <TextBlock x:Name="tb_moyenne_note_appreciation" ></TextBlock>
 
             </StackPanel>
@@ -43,7 +59,26 @@
             </StackPanel>
             <StackPanel Orientation="Vertical" Margin="10">
                 <TextBlock>La date de chaque scéance final par cour :</TextBlock>
-                <ListView  x:Name="lv_sceance_final_cours" BorderThickness="5" Height="200" Width="600" BorderBrush="Coral"></ListView>
+                <ListView  x:Name="lv_sceance_final_cours" BorderThickness="5" Height="200" Width="600" BorderBrush="Coral">
+
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="Classe:SeanceClasse">
+                            <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
+                                <StackPanel Margin="0, 0,80 , 0">
+                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind DateSeance}" HorizontalAlignment="Left"/>
+                                </StackPanel>
+
+                                <StackPanel Margin="0, 0, 100, 0"  Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind NomActivite}"/>
+                                </StackPanel>
+
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+
+
 
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="10">
