--- a/TravailSession/TravailSession/Pages/Adherent/AdherentCRUD.xaml
+++ b/TravailSession/TravailSession/Pages/Adherent/AdherentCRUD.xaml
@@ -33,6 +33,9 @@
         <StackPanel Grid.Row="1" Grid.Column="0" Margin="0,20,0,0">
             <Button x:Name="btn_ajout" Content="Ajouter un adhérent" Click="btn_ajout_Click"/>
         </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="2" Margin="0,20,0,0" HorizontalAlignment="Right">
+            <Button x:Name="btn_Export" Content="Export .CSV" Click="btn_export_Click" FontWeight="Medium" FontSize="20"/>
+        </StackPanel>
 
 
 
