--- a/TravailSession/TravailSession/Pages/Statistique.xaml
+++ b/TravailSession/TravailSession/Pages/Statistique.xaml
@@ -10,89 +10,100 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <ScrollView>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
+        <StackPanel Orientation="Vertical" Margin="20">
 
             
-            <StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock FontSize="18"  Text="• "/>
-                    <TextBlock FontSize="20" TextDecorations="Underline" Text="Nombre total d'adhérent: "/>
-                    <TextBlock FontSize="20" x:Name="tb_nb_total_adherent" ></TextBlock>
+            <StackPanel HorizontalAlignment="Center">
+                
+                <StackPanel HorizontalAlignment="Center" Margin="0, 0, 0, 10">
+                    <TextBlock Text="Statistiques du centre" FontSize="32" FontWeight="Bold"/>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal" >
-                    <TextBlock FontSize="18"  Text="• "/>
-                    <TextBlock FontSize="20" TextDecorations="Underline">Nombre total d'activités:</TextBlock>
-                    <TextBlock FontSize="20" x:Name="tb_nb_total_activite" ></TextBlock>
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <TextBlock FontSize="18"  Text="• "/>
+                        <TextBlock FontSize="20" TextDecorations="Underline" Text="Nombre total d'adhérent:" Margin="0, 0, 5, 0"/>
+                        <TextBlock FontSize="20" x:Name="tb_nb_total_adherent" ></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <TextBlock FontSize="18"  Text="• "/>
+                        <TextBlock FontSize="20" TextDecorations="Underline" Margin="0, 0, 5, 0">Nombre total d'activités:</TextBlock>
+                        <TextBlock FontSize="20" x:Name="tb_nb_total_activite" ></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <TextBlock FontSize="18"  Text="• "/>
+                        <TextBlock FontSize="20" TextDecorations="Underline" Margin="0, 0, 5, 0">Moyenne des notes d'appréciations:</TextBlock>
+                        <TextBlock FontSize="20" x:Name="tb_moyenne_note_appreciation" ></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <TextBlock FontSize="18"  Text="• "/>
+                        <TextBlock FontSize="20" TextDecorations="Underline" Margin="0, 0, 5, 0">L'adhérent avec le plus de cours:</TextBlock>
+                        <TextBlock FontSize="20" x:Name="tb_adherent_plus_cours" ></TextBlock>
+                    </StackPanel>
+
+                    <StackPanel Orientation="Horizontal" Margin="10">
+                        <TextBlock FontSize="18"  Text="• "/>
+                        <TextBlock FontSize="20" TextDecorations="Underline" Margin="0, 0, 5, 0">Le cours avec le plus de séances :</TextBlock>
+                        <TextBlock FontSize="20" x:Name="tb_cours_plus_de_sceance" ></TextBlock>
+                    </StackPanel>
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock FontSize="18"  Text="• "/>
-                    <TextBlock FontSize="20" TextDecorations="Underline">Moyenne des notes d'appréciations:</TextBlock>
-                    <TextBlock FontSize="20" x:Name="tb_moyenne_note_appreciation" ></TextBlock>
+
+
+                <StackPanel Orientation="Vertical" Margin="10">
+
+                    <TextBlock FontSize="20" TextDecorations="Underline">Nombre d'adhérents par activité :</TextBlock>
+
+                    <ListView  x:Name="lv_nb_adherent_x_activite" BorderThickness="5" Height="200" Width="600" BorderBrush="Black">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="Classe:ActiviteClasse">
+                                <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
+                                    <StackPanel Margin="0, 0,80 , 0">
+                                        <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind Nbr_adherent}" HorizontalAlignment="Left"/>
+                                    </StackPanel>
+
+                                    <StackPanel Margin="0, 0, 100, 0"  Orientation="Horizontal" HorizontalAlignment="Center">
+                                        <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind Nom }"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+
+                    </ListView>
+
                 </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock FontSize="18"  Text="• "/>
-                    <TextBlock FontSize="20" TextDecorations="Underline">L'adhérent avec le plus de cours:</TextBlock>
-                    <TextBlock FontSize="20" x:Name="tb_adherent_plus_cours" ></TextBlock>
-                </StackPanel>
 
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock FontSize="18"  Text="• "/>
-                    <TextBlock FontSize="20" TextDecorations="Underline">Le cours avec le plus de séances :</TextBlock>
-                    <TextBlock FontSize="20" x:Name="tb_cours_plus_de_sceance" ></TextBlock>
+                <StackPanel Orientation="Vertical" Margin="10">
+                    <TextBlock FontSize="20" TextDecorations="Underline">La date de chaque séance finale par cours :</TextBlock>
+                    <ListView  x:Name="lv_sceance_final_cours" BorderThickness="5" Height="200" Width="600" BorderBrush="black">
+
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="Classe:SeanceClasse">
+                                <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
+                                    <StackPanel Margin="0, 0,80 , 0">
+                                        <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind DateSeance}" HorizontalAlignment="Left"/>
+                                    </StackPanel>
+
+                                    <StackPanel Margin="0, 0, 100, 0"  Orientation="Horizontal" HorizontalAlignment="Center">
+                                        <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind NomActivite}"/>
+                                    </StackPanel>
+
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+
+
+
+
                 </StackPanel>
             </StackPanel>
             
-
-
-            <StackPanel Orientation="Vertical" Margin="10">
-                <TextBlock>Nombre d'adhérents par activité :</TextBlock>
-                <ListView  x:Name="lv_nb_adherent_x_activite" BorderThickness="5" Height="200" Width="600" BorderBrush="Black">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="Classe:ActiviteClasse">
-                            <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
-                                <StackPanel Margin="0, 0,80 , 0">
-                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind Nbr_adherent}" HorizontalAlignment="Left"/>
-                                </StackPanel>
-
-                                <StackPanel Margin="0, 0, 100, 0"  Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind Nom }"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-
-                </ListView>
-
-            </StackPanel>
-
-
-            <StackPanel Orientation="Vertical" Margin="10">
-                <TextBlock>La date de chaque séance finale par cour :</TextBlock>
-                <ListView  x:Name="lv_sceance_final_cours" BorderThickness="5" Height="200" Width="600" BorderBrush="black">
-
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="Classe:SeanceClasse">
-                            <StackPanel Orientation="Horizontal" BorderBrush="AliceBlue">
-                                <StackPanel Margin="0, 0,80 , 0">
-                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind DateSeance}" HorizontalAlignment="Left"/>
-                                </StackPanel>
-
-                                <StackPanel Margin="0, 0, 100, 0"  Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <TextBlock FontSize="18" FontWeight="Bold" Text="{x:Bind NomActivite}"/>
-                                </StackPanel>
-
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-
-
-
-
-            </StackPanel>
+            
 
 
 
